--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  web:
-    image: python:3.10
+  api:
     container_name: api_roll
-    working_dir: /app
-    volumes:
-      - .:/app
+    build: .
     ports:
       - "8000:8000"
+    volumes:
+      - .:/app
+    working_dir: /app
     command: bash -c "
       pip install --upgrade pip &&
       pip install -r requirements.txt &&
